--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
-<!-- 404.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta http-equiv="refresh" content="0; url=/" />
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0; URL='/utility/'">
   <script>
-    window.location.href = '/';
+    window.location.replace('/utility/' + window.location.pathname.replace(/^\/utility\//, ''));
   </script>
 </head>
 <body>
