--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; URL='/utility/'">
   <script>
-    window.location.replace('/utility/' + window.location.pathname.replace(/^\/utility\//, ''));
+    window.location.replace('/FF14-Utilliy/' + window.location.pathname.replace(/^\/FF14-Utilliy\//, ''));
   </script>
 </head>
 <body>
