--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/checkbox-multiple-marked-outline.svg" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FF14 Utilliy</title>
+    <title>FF14 체크리스트</title>
   </head>
   <body>
     <div id="app"></div>
