--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
   <meta http-equiv="refresh" content="0; URL='/utility/?redirect=' + encodeURIComponent(window.location.pathname + window.location.search)">
   <script>
     const currentPath = window.location.pathname.replace('/ff14-utility/', ''); 
-    window.location.href = '/utility/?redirect=' + encodeURIComponent(currentPath + window.location.search);
+    window.location.href = '/ff14-utility/?redirect=' + encodeURIComponent(currentPath + window.location.search);
   </script>
 </head>
 <body>
