--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; URL='/utility/?redirect=' + encodeURIComponent(window.location.pathname + window.location.search)">
+  <meta http-equiv="refresh" content="0; URL='/ff14-utility/?redirect=' + encodeURIComponent(window.location.pathname + window.location.search)">
   <script>
     const currentPath = window.location.pathname.replace('/ff14-utility/', ''); 
     window.location.href = '/ff14-utility/?redirect=' + encodeURIComponent(currentPath + window.location.search);
